# cookiecutter-pylibrary

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  appveyor.yml  cookiecutter-pylibrary.komodoproject  cookiecutter.json  gitlab.cookiecutterrc  publish-key.enc  publish-key.pub  pylibrary.py  setup.cfg  tox.ini
ci/: bootstrap.py  pip.conf  pip.ini  setup.cfg  strings.cfg  test.cmd  test.ps1  test.sh
ci/envs/: .cookiecutterrc  cext-docs-nolegacy.cookiecutterrc  cext-docs.cookiecutterrc  cext-nolegacy.cookiecutterrc  cext-optional.cookiecutterrc  cext.cookiecutterrc  cffi-docs-nolegacy.cookiecutterrc  cffi-docs.cookiecutterrc  cffi-nolegacy.cookiecutterrc  cffi.cookiecutterrc  cython-docs-nolegacy.cookiecutterrc  cython-docs.cookiecutterrc  cython-nolegacy.cookiecutterrc  cython.cookiecutterrc  fnaccents.cookiecutterrc  fndoublequote.cookiecutterrc  fnquote.cookiecutterrc  fntriplequote.cookiecutterrc  matrix-cext-docs-nolegacy.cookiecutterrc  matrix-cext-docs.cookiecutterrc  matrix-cext-nolegacy.cookiecutterrc  matrix-cext-optional.cookiecutterrc  matrix-cext.cookiecutterrc  matrix-fnaccents.cookiecutterrc  matrix-fndoublequote.cookiecutterrc  matrix-fnquote.cookiecutterrc  matrix-fntriplequote.cookiecutterrc  matrix-nose-argparse-py3doc-flake8.cookiecutterrc  matrix-nose-argparse-py3doc-pylama.cookiecutterrc  matrix-nose-argparse-py3doc.cookiecutterrc  matrix-nose-cext-argparse-py3doc-flake8.cookiecutterrc  matrix-nose-cext-argparse-py3doc-pylama.cookiecutterrc  matrix-nose-cext-argparse-py3doc.cookiecutterrc  matrix-nose-cext-click-py3doc-flake8.cookiecutterrc  matrix-nose-cext-click-py3doc-pylama.cookiecutterrc  matrix-nose-cext-click-py3doc.cookiecutterrc  matrix-nose-cext-cython-fndef-pndef-argparse-no.cookiecutterrc  matrix-nose-cext-cython-fndef-pndef-argparse-py3doc.cookiecutterrc  matrix-nose-cext-cython-fndef-pndef-argparse-rtd.cookiecutterrc  matrix-nose-cext-cython-fndef-pndef-argparse-yes.cookiecutterrc  (+1684 more)
ci/envs/matrix-cext/: .cookiecutterrc
ci/envs/matrix-fnaccents/: .cookiecutterrc
ci/envs/matrix-fndoublequote/: .cookiecutterrc
ci/envs/matrix-fnquote/: .cookiecutterrc
ci/envs/matrix-pndoublequote/: .cookiecutterrc
ci/envs/matrix-pnquote/: .cookiecutterrc
ci/envs/matrix-pntriplequote/: .cookiecutterrc
ci/envs/matrix-pytest/: .cookiecutterrc
ci/envs/matrix-pytest-cext/: .cookiecutterrc
ci/envs/matrix-pytest-fnaccents/: .cookiecutterrc
ci/envs/matrix-pytest-fntriplequote/: .cookiecutterrc
ci/envs/matrix-pytest-pnaccents/: .cookiecutterrc
ci/envs/plain/: .cookiecutterrc
ci/envs/plain-cext/: .cookiecutterrc
ci/envs/plain-cext-optional/: .cookiecutterrc
ci/envs/plain-nosetests-cext-optional/: .cookiecutterrc
ci/envs/plain-nosetests-fnquote/: .cookiecutterrc
ci/envs/plain-nosetests-pnquote/: .cookiecutterrc
ci/envs/plain-pnaccents/: .cookiecutterrc
ci/envs/plain-pndoublequote/: .cookiecutterrc
ci/envs/plain-pnquote/: .cookiecutterrc
ci/envs/plain-pytest/: .cookiecutterrc
ci/envs/plain-pytest-cext/: .cookiecutterrc
ci/envs/plain-pytest-pntriplequote/: .cookiecutterrc
ci/templates/: .appveyor.yml  .travis.yml  appveyor.yml  tox.ini
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .before_script.yml  .build_with_kaniko.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .tombi.toml  .travis.tmpl.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  bootstrap.py  configure  meta.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tbump.toml  tox.ini  tox.tmpl.ini
{{cookiecutter.repo_name}}/ci/: appveyor-bootstrap.ps1  appveyor-bootstrap.py  appveyor-download.py  appveyor-with-compiler.cmd  assembler.py  bootstrap.py  create_testenv_files_from_templates.py  requirements.txt
{{cookiecutter.repo_name}}/ci/templates/: .appveyor.yml  .travis.yml  appveyor.yml  tox.ini
{{cookiecutter.repo_name}}/ci/templates/.github/workflows/: github-actions.yml
{{cookiecutter.repo_name}}/conda.recipe/: meta.yaml
{{cookiecutter.repo_name}}/conf/: .travis.yml  appveyor.yml  tox.ini
{{cookiecutter.repo_name}}/dockerfiles/: slim.Dockerfile  test.Dockerfile
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
{{cookiecutter.repo_name}}/docs/_static/conda-channel/: index.html
{{cookiecutter.repo_name}}/docs/reference/: index.rst  {{cookiecutter.package_name}}.rst
{{cookiecutter.repo_name}}/licenses/: LICENSE.apache2.0
{{cookiecutter.repo_name}}/src/: {{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name.replace('-','_')}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.c_extension_module}}.c
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  _{{cookiecutter.module_name}}.c  _{{cookiecutter.module_name}}.pyx  _{{cookiecutter.module_name}}_build.py  cli.py  {{cookiecutter.c_extension_module}}.c  {{cookiecutter.c_extension_module}}.pyx  {{cookiecutter.c_extension_module}}_build.py  {{cookiecutter.module_name}}.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/tests/: test_cli.py  test_{{cookiecutter.module_name}}.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.module_name}}.py  test_{{cookiecutter.package_name}}.py
