[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
{%- if cookiecutter.setup_py_uses_setuptools_scm == 'yes' %}
    "setuptools_scm>=3.3.1",
{%- endif %}
{%- if cookiecutter.c_extension_support == 'cffi' %}
    "cffi>=1.0.0",
{%- endif %}
]
{%- if cookiecutter.pre_commit_formatter == 'black' %}

[tool.black]
line-length = 140
target-version = ['py37']
skip-string-normalization = true
{%- elif cookiecutter.pre_commit_formatter == 'blue' %}

[tool.blue]
line-length = 140
target-version = ['py37']
{%- endif %}
